allow to execute commands by creating main executor sketch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Las VERSION 1.0)
 
-add_executable(las src/commands/CommandExecutor.cpp
+add_executable(las src/commands/common/OSProxyUtils.cpp
+                   src/commands/CommandExecutor.cpp
                    src/commands/CutCommand.cpp
+                   src/commands/diff/DiffCommand.cpp
                    src/commands/common/OSCommandProxy.cpp
                    src/ui/CmdParser.cpp
                    src/executors/Las.cpp
@@ -12,6 +14,8 @@ add_executable(las src/commands/CommandExecutor.cpp
 target_include_directories(las 
                            PRIVATE
                            ${PROJECT_SOURCE_DIR}/src/commands
+                           ${PROJECT_SOURCE_DIR}/src/commands/common
+                           ${PROJECT_SOURCE_DIR}/src/commands/diff
                            ${PROJECT_SOURCE_DIR}/src/ui
                            ${PROJECT_SOURCE_DIR}/src/executors)
 
