change code structure for las diff command and add skeleton for files diff parser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(las src/commands/common/OSProxyUtils.cpp
                    src/commands/CutCommand.cpp
                    src/commands/diff/DiffCommand.cpp
                    src/commands/common/OSCommandProxy.cpp
+                   src/commands/common/FileDiffParser.cpp
                    src/ui/CmdParser.cpp
                    src/executors/Las.cpp
                    src/main.cpp)
@@ -15,6 +16,8 @@ target_include_directories(las
                            PRIVATE
                            ${PROJECT_SOURCE_DIR}/src/commands
                            ${PROJECT_SOURCE_DIR}/src/commands/common
+                           ${PROJECT_SOURCE_DIR}/src/commands/common/ioHandlers
+                           ${PROJECT_SOURCE_DIR}/src/commands/common/osProxy
                            ${PROJECT_SOURCE_DIR}/src/commands/diff
                            ${PROJECT_SOURCE_DIR}/src/ui
                            ${PROJECT_SOURCE_DIR}/src/executors)
