add las cut command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Las VERSION 1.0)
 
 add_executable(las src/commands/common/OSProxyUtils.cpp
                    src/commands/CommandExecutor.cpp
-                   src/commands/CutCommand.cpp
+                   src/commands/cut/CutCommand.cpp
                    src/commands/diff/DiffCommand.cpp
                    src/commands/diff/DiffHeadCommand.cpp
                    src/commands/diff/DiffStagedCommand.cpp
@@ -24,6 +24,7 @@ target_include_directories(las
                            ${PROJECT_SOURCE_DIR}/src/commands/common/parsers
                            ${PROJECT_SOURCE_DIR}/src/commands/common/writers
                            ${PROJECT_SOURCE_DIR}/src/commands/common/osProxy
+                           ${PROJECT_SOURCE_DIR}/src/commands/cut
                            ${PROJECT_SOURCE_DIR}/src/commands/diff
                            ${PROJECT_SOURCE_DIR}/src/ui
                            ${PROJECT_SOURCE_DIR}/src/executors
